@@ -66,6 +66,7 @@ calcif
 Version 1.5
 * allow -a for globbing all .calc files or a list of files.
 * don't rerun if unnecessary, unless -f is used
+* generate files in /tmp and move when complete to prevent partial files
 
 Version 1.2
 * Handle CALC_SERVER env var, and command line value.
